<resources>
    <string name="app_name">Morse Code Translator</string>
    <string name="action_settings">Settings</string>
    <string name="message_to_morse">Enter your Text</string>
    <string name="morse_to_message">Enter your Morse Code</string>
    <string name="morse_label">Morse</string>
    <string name="text_label">Text</string>
    <string name="btn_translate">Translate</string>
    <string name="copied_to_clipboard_message">Copied to Clipboard !</string>
    <string name="empty_error_message">You did not enter anything</string>
    <string name="contact_us_label">Contact us: monkmoldova@gmail.com</string>
    <string name="error_hint">Click ME!</string>
    <string name="clear_result_message">Cleared !</string>

    <string name="share_with_title">Send using : </string>
    <string name="share_empty">Message can not be empty !</string>
</resources>
