<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    ads:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/borders2"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llSwitch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/swap_box"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLeft"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/text_label"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageButton
                android:id="@+id/ibSwap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/swap_button"
                android:src="@mipmap/ic_swap_horizontal_white_24dp" />

            <TextView
                android:id="@+id/tvRight"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/morse_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <EditText
            android:id="@+id/etMessageToCode"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:hint="@string/message_to_morse"
            android:paddingStart="5dp"
            android:paddingLeft="5dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="5"
        android:background="@drawable/borders2"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rlBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/swap_box">

            <ImageButton
                android:id="@+id/ibAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:src="@mipmap/ic_alert_red_36dp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnCodeIt"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ripple"
                android:drawableLeft="@mipmap/ic_chevron_right_blue_24dp"
                android:paddingLeft="2dp"
                android:paddingRight="5dp"
                android:text="@string/btn_translate"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/btnCopy"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toStartOf="@+id/btnCodeIt"
                android:layout_toLeftOf="@id/btnCodeIt"
                android:background="@drawable/ripple"
                android:drawableStart="@mipmap/ic_content_copy_blue_24dp"
                android:drawableLeft="@mipmap/ic_content_copy_blue_24dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="COPY !"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

            <TextView
                android:id="@+id/tvCodedMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textIsSelectable="true"
                android:textSize="30sp"
                android:textStyle="bold" />

        </ScrollView>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5728034123668865/7029163632" />
</LinearLayout>